--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -4,7 +4,7 @@
 }
 </style>
 
-<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
+<button type="button" class="btn btn-info btn-circle" ng-click="addrObj.addItem()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
 
 
 <div class="table-responsive">	
