--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -22,29 +22,29 @@
 			        </div>
 			        <span class="pull-right" ng-repeat="u in productsSelect | filter : selectedProduct">{{ u.productName }}&nbsp&nbsp</span>
                 </div>
-                <div class="panel-body">
-					<div class="col-lg-12">
-						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
-							<span class="input-group-addon" style="border: 0px; background: none;">
-								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
-							</span>
-							<pagination ng-change="pageChanged()" total-items="totalItems"
-										first-text="{{'pagination.first' | translate}}"
-										previous-text="{{'pagination.previous' | translate}}"
-										next-text="{{'pagination.next' | translate}}"
-										last-text="{{'pagination.last' | translate}}"
-										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
-										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
-										rotate="false" num-pages="numPages" style="margin: auto;" />
-							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
-								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
-							</span>
-						</div>
+                <div class="panel-body" style="padding: 3px;">
+					
+					<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
+						<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+							{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
+						</span>
+						<pagination ng-change="pageChanged()" total-items="totalItems"
+									first-text="{{'pagination.first' | translate}}"
+									previous-text="{{'pagination.previous' | translate}}"
+									next-text="{{'pagination.next' | translate}}"
+									last-text="{{'pagination.last' | translate}}"
+									ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+									max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+									rotate="false" num-pages="numPages" style="margin: auto;" />
+						<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+							<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+						</span>
 					</div>
-					<div class="table-responsive col-lg-12">
-						<table class="table table-striped table-hover">
+						
+					<div class="table-responsive">
+						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
-								<tr>
+								<tr style="color: #337AB7;">
 									<th width="10%">ลำดับที่</th>
 									<th width="50%">ชื่อไฟล์</th>
 									<th width="10%">จำนวนเคส</th>
@@ -55,7 +55,7 @@
 								</tr>
 							<thead>
 							<tbody>
-								<tr ng-repeat="data in datas track by $index">
+								<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.fileName }}</td>
 									<td>{{ data.rowNum | number:0 }}</td>
@@ -67,7 +67,6 @@
 							</tbody>
 						</table>
 					</div>
-					
 					
 				</div>
                 <div class="panel-footer"></div>
