--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -1,154 +1,148 @@
-<div>
-	<div class="row">
-		<div class="col-lg-12">
-			<h1 class="page-header">นำเข้างานใหม่</h1>
-		</div>
-	</div>
-	
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
-                    <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
-			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-			            	<i class="fa fa-chevron-down"></i>
-			            </button>
-			            <ul class="dropdown-menu slidedown">
-			                <li ng-repeat="u in productsSelect">
-			                    <a href="" ng-click="changeProduct(u.id, u.productName)">{{ u.productName }}</a>
-			                </li>
-			            </ul>
-			        </div>
-			        <span class="pull-right">{{ productName }}&nbsp&nbsp</span>
-                </div>
-                <div class="panel-body">
-                	
-					 <div class="col-lg-12">
-					 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 
-	                    	<!-- <h3>Upload queue</h3>
-		                    <p>Queue length: {{ uploader.queue.length }}</p> -->
-		
-		                    <table class="table">
-		                        <thead>
-		                            <tr>
-		                                <th width="50%">Name</th>
-		                                <th ng-show="uploader.isHTML5">Size</th>
-		                                <th ng-show="uploader.isHTML5">Progress</th>
-		                                <th>Status</th>
-		                                <th>Actions</th>
-		                            </tr>
-		                        </thead>
-		                        <tbody>
-		                            <tr ng-repeat="item in uploader.queue">
-		                                <td><strong>{{ item.file.name }}</strong></td>
-		                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-		                                <td ng-show="uploader.isHTML5">
-		                                    <div class="progress" style="margin-bottom: 0;">
-		                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
-		                                    </div>
-		                                </td>
-		                                <td class="text-center">
-		                                	<span ng-show="item.isUploading"><i class="fa fa-spinner fa-spin fa-fw"></i></span>
-		                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-		                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-		                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-		                                </td>
-		                                <td nowrap>
-		                                    <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
-		                                        <span class="glyphicon glyphicon-upload"></span> Upload
-		                                    </button>
-		                                    <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
-		                                        <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-		                                    </button> -->
-		                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
-		                                        <span class="glyphicon glyphicon-trash"></span> Remove
-		                                    </button>
-		                                </td>
-		                            </tr>
-		                        </tbody>
-		                    </table>
-		                    <div>
-		                        <div>
-		                            Queue progress:
-		                            <div class="progress" style="">
-		                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
-		                            </div>
-		                        </div>
-		                        <div class="row">
-			                        <div class="col-lg-6">
-				                        <!-- <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
-				                            <span class="glyphicon glyphicon-upload"></span> Upload all
-				                        </button> -->
-				                        <!-- <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
-				                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-				                        </button> -->
-				                        <!-- <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
-				                            <span class="glyphicon glyphicon-trash"></span> Remove all
-				                        </button> -->
-			                        </div>
-			                        <div class="col-lg-6">
-				                        <input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
-				                        
-			                        	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลเสริม</button>
-			                        </div>
-		                        </div>
-		                    </div>
-						</div>
-	                </div>
-					
-					
-					<div class="col-lg-12">
-						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
-							<span class="input-group-addon" style="border: 0px; background: none;">
-								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
-							</span>
-							<pagination ng-change="pageChanged()" total-items="totalItems"
-										first-text="{{'pagination.first' | translate}}"
-										previous-text="{{'pagination.previous' | translate}}"
-										next-text="{{'pagination.next' | translate}}"
-										last-text="{{'pagination.last' | translate}}"
-										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
-										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
-										rotate="false" num-pages="numPages" style="margin: auto;" />
-							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
-								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
-							</span>
-						</div>
-					</div>
-					<div class="table-responsive col-lg-12">
-						<table class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th width="10%">ลำดับที่</th>
-									<th width="50%">ชื่อไฟล์</th>
-									<th width="10%">จำนวนเคส</th>
-									<th width="20%">วันที่นำเข้า</th>
-									<th width="10%"></th>									
-								</tr>
-							<thead>
-							<tbody>
-								<tr ng-repeat="data in datas track by $index">
-									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td>{{ data.fileName }}</td>
-									<td>{{ data.rowNum | number:0 }}</td>
-									<td>{{ data.createdDateTime | date:format }}</td>
-									<td>
-										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp;
-										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewDetail(data.id)"></i>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					
-					
-				</div>
-                <div class="panel-footer"></div>
-            </div>
-        </div>
-    </div>
+<div class="row">
+	<div class="col-lg-12">
+		<h1 class="page-header">นำเข้างานใหม่</h1>
+	</div>
+</div>
+	
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
+        <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
+        <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+         	<i class="fa fa-chevron-down"></i>
+        </button>
+        <ul class="dropdown-menu slidedown">
+        	<li ng-repeat="u in productsSelect">
+            	<a href="" ng-click="changeProduct(u.id, u.productName)">{{ u.productName }}</a>
+            </li>
+        </ul>
+     	</div>
+     	<span class="pull-right">{{ productName }}&nbsp&nbsp</span>
+     </div>
+	<div class="panel-body" style="padding: 3px;">
+          	
+          	<div class="panel panel-info" style="margin: 0;">
+				<div class="panel-heading">
+
+              	<!-- <h3>Upload queue</h3>
+               <p>Queue length: {{ uploader.queue.length }}</p> -->
+
+               <table class="table">
+                   <thead>
+                       <tr>
+                           <th width="50%">Name</th>
+                           <th ng-show="uploader.isHTML5">Size</th>
+                           <th ng-show="uploader.isHTML5">Progress</th>
+                           <th>Status</th>
+                           <th>Actions</th>
+                       </tr>
+                   </thead>
+                   <tbody>
+                       <tr ng-repeat="item in uploader.queue">
+                           <td><strong>{{ item.file.name }}</strong></td>
+                           <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+                           <td ng-show="uploader.isHTML5">
+                               <div class="progress" style="margin-bottom: 0;">
+                                   <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                               </div>
+                           </td>
+                           <td class="text-center">
+                           	<span ng-show="item.isUploading"><i class="fa fa-spinner fa-spin fa-fw"></i></span>
+                               <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                               <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                               <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                           </td>
+                           <td nowrap>
+                               <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                                   <span class="glyphicon glyphicon-upload"></span> Upload
+                               </button>
+                               <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
+                                   <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                               </button> -->
+                               <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+                                   <span class="glyphicon glyphicon-trash"></span> Remove
+                               </button>
+                           </td>
+                       </tr>
+                   </tbody>
+               </table>
+               <div>
+                   <div>
+                       Queue progress:
+                       <div class="progress" style="">
+                           <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+                       </div>
+                   </div>
+                   <div class="row">
+                    <div class="col-lg-6">
+                     <!-- <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+                         <span class="glyphicon glyphicon-upload"></span> Upload all
+                     </button> -->
+                     <!-- <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
+                         <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+                     </button> -->
+                     <!-- <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+                         <span class="glyphicon glyphicon-trash"></span> Remove all
+                     </button> -->
+                    </div>
+                    <div class="col-lg-6">
+                     <input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
+                       
+                      	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลเสริม</button>
+                      </div>
+                     </div>
+                 </div>
+			</div>
+			
+			<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+				<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+				{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
+				</span>
+				<pagination ng-change="pageChanged()" total-items="totalItems"
+							first-text="{{'pagination.first' | translate}}"
+							previous-text="{{'pagination.previous' | translate}}"
+							next-text="{{'pagination.next' | translate}}"
+							last-text="{{'pagination.last' | translate}}"
+							ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+							max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+							rotate="false" num-pages="numPages" style="margin: auto;" />
+				<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+					<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+				</span>
+			</div>
+			
+		</div>
+
+		<div class="table-responsive">
+			<table class="table table-striped table-hover" style="margin: 0;">
+				<thead>
+					<tr style="color: #337AB7;">
+						<th width="10%">ลำดับที่</th>
+						<th width="50%">ชื่อไฟล์</th>
+						<th width="10%">จำนวนเคส</th>
+						<th width="20%">วันที่นำเข้า</th>
+						<th width="10%"></th>									
+					</tr>
+				<thead>
+				<tbody>
+					<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
+						<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+						<td>{{ data.fileName }}</td>
+						<td>{{ data.rowNum | number:0 }}</td>
+						<td>{{ data.createdDateTime | date:format }}</td>
+						<td>
+							<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp;
+							<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewDetail(data.id)"></i>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	
+	
+	</div>
+	<div class="panel-footer"></div>
 </div>
 
 
