--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -19,13 +19,11 @@
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> แสดงรายละเอียดงาน&nbsp;
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
-                	<div class="col-lg-12">
-						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+                	<div class="panel panel-info" style="margin: 0;">
+						<div class="panel-heading">
 							<form class="form-inline" ng-submit="search()">
-							
-							
 							  <div class="form-group input-group">
 							  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
 							  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in usersSearch">
@@ -37,8 +35,6 @@
 							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 							  </div>
-							  
-							  
 							  
 							  <div class="form-group" style="margin-left: 20px;">
 				                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
@@ -54,17 +50,15 @@
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							   
 							   <div class="pull-right">
-							   	     งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp;
+							   	     <!-- งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp; -->
 								  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
 							   </div>
 							</form>
 						</div>
-					</div>
-                
-                
-					<div class="col-lg-12">
-						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
-							<span class="input-group-addon" style="border: 0px; background: none;">
+						
+						
+						<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
 							</span>
 							<pagination ng-change="pageChanged()" total-items="totalItems"
@@ -75,22 +69,22 @@
 										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
 										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 										rotate="false" num-pages="numPages" style="margin: auto;" />
-							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
 								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 							</span>
 						</div>
 					</div>
-					<div class="col-lg-12">
-					<div class="table-responsive col-lg-12" style="padding: 0;">
-						<table class="table table-striped table-hover table-bordered">
+					
+					<div class="table-responsive" style="padding: 0;">
+						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px;">
+										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
-											<i id="{{ h.columnName }}_desc" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
-											<i id="{{ h.columnName }}_asc" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
+											<i id="{{ h.columnName }}_desc" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+											<i id="{{ h.columnName }}_asc" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 										</a>
 									</th>
 								</tr>
@@ -98,7 +92,7 @@
 							<!-- <tbody class="noselect"> -->
 							<tbody>
 								<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" 
-								    data-context-menu="./views/taskdetail/contextMenu1.html">
+								    data-context-menu="./views/taskdetail/contextMenu1.html" style="color: #337AB7;">
 									<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										
@@ -118,7 +112,8 @@
 							</tbody>
 						</table>
 					</div>
-					</div>
+					
+					
 				</div>
                 <div class="panel-footer"></div>
             </div>
