--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -38,57 +38,56 @@
 				<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 			</span>
 		</div>
-
-		<div class="table-responsive" style="padding: 0;">
-			<table class="table table-striped table-hover table-bordered">
-				<thead>
-					<tr>
-						<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
-						<th style="white-space: nowrap; text-align: center;">
-							<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-								วันนัดชำระ&nbsp;
-								<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-								<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-							</a>
-						</th>
-						<th style="white-space: nowrap; text-align: center;">
-							<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
-								วันนัด Call&nbsp;
-								<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-								<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
-							</a>
-						</th>
-						<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-							<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
-								{{ h.columnNameAlias || h.columnName }}&nbsp;
-								<i class="fa fa-sort-desc fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 2px;"></i>
-								<i class="fa fa-sort-up fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 2px;"></i>
-							</a>
-						</th>
-					</tr>
-				<thead>
-				<!-- <tbody class="noselect"> -->
-				<tbody>
-					<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data.id)" style="cursor: pointer; color: #337AB7;">
-						<td style="vertical-align: middle; text-align: center;">
-							<span class="badge" ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
-								{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
-							</span>
-						</td>
-						<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
-						<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
-						<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-							{{ 
-							   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
-							   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-							   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
-							   }}
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
 	</div> <!-- / panel panel-info -->
+
+	<div class="table-responsive" style="padding: 0;">
+		<table class="table table-striped table-hover table-bordered" style="margin: 0;">
+			<thead>
+				<tr>
+					<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+					<th style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							วันนัดชำระ&nbsp;
+							<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+					<th style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							วันนัด Call&nbsp;
+							<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+					<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							{{ h.columnNameAlias || h.columnName }}&nbsp;
+							<i class="fa fa-sort-desc fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 2px;"></i>
+							<i class="fa fa-sort-up fw" ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+				</tr>
+			<thead>
+			<!-- <tbody class="noselect"> -->
+			<tbody>
+				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data.id)" style="cursor: pointer; color: #337AB7;">
+					<td style="vertical-align: middle; text-align: center;">
+						<span class="badge" ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
+							{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+						</span>
+					</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
+					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+						{{ 
+						   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
+						   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
+						   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
+						   }}
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 
 </div>
