--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,4 +1,4 @@
-<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
+<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate style="margin-top: 15px;">
 		<div class="col-lg-6">
 			<div class="row">
 				<div class="col-lg-6">
