--- a/backend/src/main/webapp/app/views/user/main.html
+++ b/backend/src/main/webapp/app/views/user/main.html
@@ -10,11 +10,11 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
+                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
                 	<div ui-view></div>
                 	
