--- a/backend/src/main/webapp/app/views/product/database_conf.html
+++ b/backend/src/main/webapp/app/views/product/database_conf.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6" style="margin-top: 15px;">
+<div class="col-lg-6" style="margin-top: 15px; color: #337AB7;">
 	<form name="addUserForm" ng-submit="update()" novalidate>
           	<div class="row">
           		<div class="form-group col-lg-12" ng-class="{'has-error':addUserForm.dbName.$invalid}">
