--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -40,7 +40,7 @@
 	<table class="table table-striped table-hover" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th>#</th>
+				<th>ลำดับที่</th>
 				<th>ชื่อโปรดักส์</th>
 				<th>{{'user.table.header.status' | translate}}</th>
 				<th>{{'user.table.header.created_date' | translate}}</th>
