--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -12,7 +12,7 @@
                     <i class="fa fa-user fa-fw"></i> {{'profile.header_panel' | translate}}
                 </div>
                 <div class="panel-body">
-					<form role="form" name="profileForm" ng-submit="updateProfile()">
+					<form role="form" name="profileForm" ng-submit="updateProfile()" style="color: #337AB7;">
 						<div class="col-lg-6">
 							<div class="row">
 								<div class="form-inline" style="text-align: center;">
