--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -14,11 +14,11 @@
                 <div class="panel-body">
 					<form role="form" name="profileForm" ng-submit="updateProfile()" style="color: #337AB7;">
 						<div class="col-lg-6">
-							<div class="row">
+							<!-- <div class="row">
 								<div class="form-inline" style="text-align: center;">
 									<label class="bg-success profile-label">{{'profile.role' | translate}} <i class="fa fa-caret-right fa-fw"></i> {{ data.role }}</label>
 								</div>
-							</div>
+							</div> -->
 							<div class="row">
 								<div class="col-lg-6">
 									<div class="form-group" ng-class="{'has-error': profileForm.userNameShow.$invalid  || existingUserShowErrMsg}">
