--- a/backend/src/main/webapp/app/views/working/main.html
+++ b/backend/src/main/webapp/app/views/working/main.html
@@ -13,6 +13,16 @@
                     <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="iconBtn">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
+                    
+                    <div class="btn-group pull-right" ng-show="group0 && !iconBtn">
+						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+							<i class="fa fa-chevron-down"></i>
+						</button>
+						<ul class="dropdown-menu slidedown">
+							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
+						</ul>
+					</div>
+					<span class="pull-right" ng-show="group0 && !iconBtn">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
