--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -142,9 +142,9 @@
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
-										   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:format) : 
-										   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : 
-										   h.dataType == 'sys_owner' ? data.taskDetail[h.columnName][0].showname : data.taskDetail[h.columnName] 
+										   h.dataType == 'date' ? (data.taskDetail[0][h.columnName] | date:format) : 
+										   h.dataType == 'num' ? (data.taskDetail[0][h.columnName] | number:2) : 
+										   h.dataType == 'sys_owner' ? data.taskDetail[0][h.columnName][0].showname : data.taskDetail[0][h.columnName] 
 										}}
 									</td>
 								</tr>
@@ -152,14 +152,6 @@
 						</table>
 					</div>
                 	
-                	
-                	
-                	
-                	
-                	
-                	
-                	
-					
                 </div>
                 <div class="panel-footer"></div>
             </div>
