--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -59,7 +59,7 @@
 			        <div class="buttons" ng-show="!rowform.$visible">
 			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ"></i>&nbsp;
 			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>&nbsp;
-			          <i class="fa fa-print fa-lg user-action-icon-primary" title="Print Notice" ng-click="noticeMenu(item.addr1 + ' ' + item.addr2 + '' + item.addr3 + ' ' + item.addr4)"></i>
+			          <i class="fa fa-print fa-lg user-action-icon-primary" title="Print Notice" ng-click="noticeMenu(item.addr1 + '\r' + item.addr2 + '\r' + item.addr3 + '\r' + item.addr4)"></i>
 			        </div>  
 		      	</td>
 			</tr>
