--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -13,7 +13,7 @@
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
 				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;"
-					 ng-style="f.isNotice ? {'cursor': 'pointer'} : {}" ng-click="f.isNotice ? noticeMenu(taskDetail[f.columnName]) : ''">
+					 ng-style="f.isNotice ? {'cursor': 'pointer'} : {}" ng-click="f.isNotice ? noticeMenu(taskDetail[f.columnName+'_hide']) : ''">
 						{{ 
 						   f.dataType == 'sys_owner' ? taskDetail[f.columnName][0].showname :
 						   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
