--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -39,9 +39,9 @@
 						<thead>
 						<tbody>
 							<tr ng-repeat="item in items" style="color: #337AB7;">
-								<td style="vertical-align: middle;"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
-								<td style="vertical-align: middle;"><span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span></td>
-								<td style="vertical-align: middle;"><span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span></td>
+								<td style="vertical-align: middle;"><span editable-text="item.actCode" e-name="code" e-form="rowform">{{ item.actCode }}</span></td>
+								<td style="vertical-align: middle;"><span editable-text="item.actDesc" e-name="desc" e-form="rowform">{{ item.actDesc }}</span></td>
+								<td style="vertical-align: middle;"><span editable-text="item.actMeaning" e-name="meaning" e-form="rowform">{{ item.actMeaning }}</span></td>
 								<td style="vertical-align: middle;"><span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
 									<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
 									<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
