--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -58,7 +58,7 @@
 							
 							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 							   <button type="submit" class="btn btn-outline btn-primary" ng-disabled="searchForm.$invalid">ค้นหา</button>
-							   <button type="button" class="btn btn-outline btn-primary" ng-disabled="searchForm.$invalid" ng-click="exportResult()">Export</button>
+							   <button type="button" class="btn btn-outline btn-primary" ng-disabled="searchForm.$invalid" ng-click="exportResult()" ng-show="group1">Export</button>
 							   
 							   <div class="form-group pull-right">
 								   <label>ยอดนัดชำระรวม: {{ appointAmountTotal | number:2 }} บาท</label><br />
@@ -165,8 +165,8 @@
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
 									
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].code }}</td>
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].code }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].actCode }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].rstCode }}</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['tel'] }}</td>
 									
