--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -100,7 +100,7 @@
 										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
 										   ng-change="askModalObj.appointDateClick()">
 								  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								  <input type="text" class="form-control" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
+								  <input type="number" class="form-control" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
 								</div>
 							</div>
 						  </div>
@@ -117,7 +117,7 @@
 						  <div class="col-lg-12">
 						  	<div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
 								<label class="control-label">Action Code</label>
-								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.actionCodes">
+								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.actMeaning + ' [' + option.actCode + ']' for option in askModalObj.init.actionCodes">
 									<option value="">--เลือก Action Code--</option>
 						  		</select>
 							</div>
@@ -131,7 +131,7 @@
 								          <li ng-repeat="gp in askModalObj.init.resultCodeGroups"><a href="" ng-click="askModalObj.changeResultGroups(gp)">{{ gp.name }}</a></li>
 								        </ul>
 									</div>	
-									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.resultCodes">
+									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.rstMeaning + ' [' + option.rstCode + ']' for option in askModalObj.init.resultCodes">
 										<option value="">--เลือก Result Code--</option>
 							  		</select>
 						  		</div>
